[FIX] web: increasing z-index of overlay-item
Currently in the code base there is a recurrent problem of different components
using z-index as ``` z-index: $zindex-modal + 1(a constant) ``` just so that
their components have no obstructions. Due to this there is a problem for
overlay service as each overlay-item uses z-index same as zindex-modal. Thus
this causes problem in some areas (especially tours). Thus increasing z-index
of overlay-item would be good.

task-3906723

closes odoo/odoo#172797

--- a/addons/web/static/src/core/overlay/overlay_container.scss
+++ b/addons/web/static/src/core/overlay/overlay_container.scss
@@ -1,4 +1,4 @@
 .o-overlay-item {
     position: fixed;
-    z-index: $zindex-modal;
+    z-index: $zindex-modal + 5;
 }
